<resources>
    <string name="app_name">Small Steps</string>
    <string name="app_background">App Background</string>
    <string name="menu_logout_title">Logout</string>
    <string name="main_groupSearchButton_text">Group Search</string>
    <string name="main_aboutButton_text">About</string>
    <string name="main_habitsButton_text">Habits List</string>
    <string name="about_title">About</string>
    <string name="about_text_1">Habit building is a process based on what you do repeatedly. It takes, on average, 66 days to build a habit. Given the time and commitment required, it is difficult to maintain the motivation to keep going.
    </string>
    <string name="about_text_2">
        Small Steps aims to help you build habits by focusing on small steps. It is based on the ideas of The 3 R’s of Habit Change: Reminder, Routine, and Reward.
    </string>
    <string name="about_text_3a">A Reminder is the trigger that initiates the behavior.\n\nA Routine is the behavior, itself.\n\nA Reward is the benefit gained from performing the behavior.
    </string>
    <string name="about_text_3b">A Reminder is the trigger that initiates the behavior.\nA Routine is the behavior, itself.\nA Reward is the benefit gained from performing the behavior.
    </string>
    <string name="about_text_4">
        This app uses Reminders to trigger Routines to earn Rewards.
    </string>
    <string name="about_text_5">
        With this process, small steps build big habits!
    </string>
    <string name="search_title">Group Search</string>
    <string name="search_text_1">Along side habit tracking, Small Steps aims to provide additional features to help support you in your habit building.
    </string>
    <string name="search_text_2">The Group Search finds groups from Meetup.com to find others pursuing the same interests or goals. Ideally, habits and groups will be linked and work together in a future release.
    </string>
    <string name="search_searchEditText_hint">What you want to learn or practice</string>
    <string name="search_zipEditText_hint">Your 5 digit ZIP Code</string>
    <string name="search_searchButton_text">Find Groups</string>
    <string name="habits_title">Habits</string>
    <string name="habits_habitNameEditText_hint">New Habit Name</string>
    <string name="habits_addHabitButton_text">Add Habit</string>
    <string name="newHabit_title">New Habit</string>
    <string name="newHabit_newHabitTitleEditText_hint">Title</string>
    <string name="login_loginTitleTextView_text">Account Login</string>
    <string name="login_loginEmailEditText_hint">Email</string>
    <string name="login_loginPasswordEditText_hint">Password</string>
    <string name="login_loginLoginButton_text">Log In</string>
    <string name="login_loginRegistrationTextView_text">Don\'t have an account? Sign up here!</string>
    <string name="registration_registrationTitleTextView_text">Account Registration</string>
    <string name="registration_registrationNameEditText_hint">Name</string>
    <string name="registration_registrationEmailEditText_hint">Email</string>
    <string name="registration_registrationPasswordEditText_hint">Password</string>
    <string name="registration_registrationConfirmPasswordEditText">Confirm Password</string>
    <string name="registration_registrationSignUpButton_text">Sign Up</string>
    <string name="registration_registrationLoginTextView_text">Already have an account? Log in here!</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>