<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.epicodus.smallsteps.ui.SearchActivity">

    <TextView
        android:id="@+id/searchTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/search_title"
        android:textColor="@color/colorPrimaryText"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/searchTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/searchTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/search_text_1"
        android:textColor="@color/colorPrimaryText" />

    <TextView
        android:id="@+id/searchtextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/searchTextView2"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/search_text_2"
        android:textColor="@color/colorPrimaryText" />

    <EditText
        android:id="@+id/searchEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:hint="@string/search_searchEditText_hint"
        android:inputType="text"
        android:layout_below="@+id/searchtextView3"
        android:layout_alignLeft="@+id/searchtextView3"
        android:layout_alignStart="@+id/searchtextView3"
        android:layout_alignRight="@+id/searchtextView3"
        android:layout_alignEnd="@+id/searchtextView3" />

    <EditText
        android:id="@+id/zipEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/searchEditText"
        android:layout_alignLeft="@+id/searchEditText"
        android:layout_alignRight="@+id/searchEditText"
        android:layout_alignStart="@+id/searchEditText"
        android:layout_below="@+id/searchEditText"
        android:ems="10"
        android:layout_marginTop="14dp"
        android:hint="@string/search_zipEditText_hint"
        android:inputType="text" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="200dp"
        android:layout_below="@+id/zipEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:background="@color/colorPrimary"
        android:text="@string/search_searchButton_text"
        android:textColor="@color/colorPrimaryText" />

</RelativeLayout>