<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.epicodus.smallsteps.ui.LoginActivity"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/mainBackgroundImageView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/main_background"
        android:contentDescription="@string/app_background" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout">

        <EditText
            android:id="@+id/loginEmailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:hint="@string/login_loginEmailEditText_hint"
            android:inputType="textEmailAddress"
            android:nextFocusDown="@+id/loginPasswordEditText"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/colorDivider"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/loginPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:hint="@string/login_loginPasswordEditText_hint"
            android:inputType="textPassword"
            android:nextFocusDown="@+id/loginLoginButton"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/colorDivider"
            android:textSize="20sp" />


        <Button
            android:id="@+id/loginLoginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/login_loginLoginButton_text"
            android:background="@color/colorPrimaryDark"
            android:layout_marginTop="15dp"
            android:textColor="@color/colorAccent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorPrimaryText"
            android:textStyle="bold"
            android:textSize="15sp"
            android:text="@string/login_loginRegistrationTextView_text"
            android:id="@+id/loginRegistrationTextView"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

    <TextView
        android:id="@+id/loginTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_loginTitleTextView_text"
        android:textColor="@color/colorPrimaryText"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_above="@+id/linearLayout"
        android:layout_centerHorizontal="true" />

</RelativeLayout>