<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    tools:context="com.epicodus.smallsteps.AboutActivity">

    <TextView
        android:id="@+id/aboutTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/about_title"
        android:textColor="@color/colorPrimaryText"
        android:textSize="30dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/summaryTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/aboutTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/about_text_1"
        android:textColor="@color/colorPrimaryText" />

    <TextView
        android:id="@+id/summaryTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/summaryTextView1"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/about_text_2"
        android:textColor="@color/colorPrimaryText" />

    <TextView
        android:id="@+id/summaryTextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/summaryTextView2"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/about_text_3"
        android:textColor="@color/colorPrimaryText" />

    <TextView
        android:id="@+id/summaryTextView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/summaryTextView3"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/about_text_4"
        android:textColor="@color/colorPrimaryText" />

    <TextView
        android:id="@+id/summaryTextView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/summaryTextView4"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/about_text_5"
        android:textColor="@color/colorPrimaryText" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:width="200dp"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorPrimaryText"
        android:text="Back" />

</RelativeLayout>
