<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="com.epicodus.smallsteps.ui.HabitsActivity">

    <TextView
        android:id="@+id/habitsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/habits_title"
        android:textColor="@color/colorPrimaryText"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/habitNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/habitsTextView"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/habits_habitNameEditText_hint" />

    <Button
        android:id="@+id/addHabitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/habitNameEditText"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorPrimaryText"
        android:layout_toEndOf="@+id/habitNameEditText"
        android:layout_toRightOf="@+id/habitNameEditText"
        android:text="@string/habits_addHabitButton_text" />

    <View
        android:id="@+id/habitsListViewDividerBegin"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimaryDark"
        android:layout_below="@+id/addHabitButton"
        android:layout_marginTop="28dp"/>

    <ListView
        android:id="@+id/habitsListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/habitNameEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:divider="@color/colorPrimary"
        android:dividerHeight="1dp" />

</RelativeLayout>
